--- a/framework/index.html
+++ b/framework/index.html
@@ -30,21 +30,21 @@
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="#">
+                    <a href="index.html">
                         Bet Crypto
                     </a>
                 </li>
                 <li>
-                    <a href="#">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="#">Bets</a>
+                    <a href="activebets.html">Bets</a>
                 </li>
                 <li>
-                    <a href="#">Account</a>
+                    <a href="accountinfo.html">Account</a>
                 </li>
                 <li>
-                    <a href="#">Settings</a>
+                    <a href="settings.html">Settings</a>
                 </li>
             </ul>
         </div>
@@ -63,31 +63,43 @@
             <hr>
             <div class="bets text-center">
               <div class="over1">
+                <a href="betform.html">  
               <button type="button" class="btn btn-primary">Over</button>
+                  </a>
               </div>
               <div class="ex-1">
               <h6>Example 1</h6>
               </div>
               <div class="under1">
+                  <a href="betform.html">
               <button type="button" class="btn btn-primary">Under</button>
+                  </a>
               </div>
               <div class="over2">
+                  <a href="betform.html">
               <button type="button" class="btn btn-primary">Over</button>
+                  </a>
               </div>
               <div class="ex-2">
               <h6>Example 2</h6>
               </div>
               <div class="under2">
+                  <a href="betform.html">
               <button type="button" class="btn btn-primary">Under</button>
+                  </a>
               </div>
               <div class="over3">
+                  <a href="betform.html">
               <button type="button" class="btn btn-primary">Over</button>
+                  </a>
               </div>
               <div class="ex-3">
               <h6>Example 3</h6>
               </div>
               <div class="under3">
+                  <a href="betform.html">
               <button type="button" class="btn btn-primary">Under</button>
+                  </a>
               </div>
             </div>
 
