--- a/framework/settings.html
+++ b/framework/settings.html
@@ -27,7 +27,7 @@
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="index.html">
+                    <a class="welcomesign" href="index.html">
                         Bet Crypto
                     </a>
                 </li>
@@ -77,6 +77,8 @@
     });
     </script>
         
+    <!-- Temp Login JS -->
+    <script src="scripts/main.js"></script>
         
     </body>
 </html>
